; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_avr.c_check_buffer_rjmp.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/p/extr_bin_avr.c_check_buffer_rjmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rjmp = common dso_local global i32 0, align 4
@tmp_entry = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @check_buffer_rjmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_buffer_rjmp(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @rjmp, align 4
  %7 = call i32 @CHECK3INSTR(i32* %5, i32 %6, i32 4)
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @rjmp_dest(i32 0, i32* %8)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = icmp slt i32 %10, 1
  br i1 %11, label %17, label %12

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @r_buf_size(i32* %14)
  %16 = icmp sgt i32 %13, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %12, %1
  store i32 0, i32* %2, align 4
  br label %20

18:                                               ; preds = %12
  %19 = load i32, i32* %4, align 4
  store i32 %19, i32* @tmp_entry, align 4
  store i32 1, i32* %2, align 4
  br label %20

20:                                               ; preds = %18, %17
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i32 @CHECK3INSTR(i32*, i32, i32) #1

declare dso_local i32 @rjmp_dest(i32, i32*) #1

declare dso_local i32 @r_buf_size(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
